--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "eslint-plugin-prettier": "^5.2.6",
+    "groq-sdk": "^0.20.1",
     "next": "15.3.1",
     "prettier": "^3.5.3",
     "react": "^19.0.0",
