--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "prettier": "^3.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "url-metadata": "^5.0.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
